테스트 수정 및 일부 리팩토링